--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -138,7 +138,7 @@
 <script type="text/javascript">
 	$('body').ready(function(){
 		$('#meeting_list li').click(function(){
-			document.location='https://hangoutsapi.talkgadget.google.com/hangouts/9682fbb7f430135d3ff53db47f64e48402767ad2';
+			document.location='https://hangoutsapi.talkgadget.google.com/hangouts/da8726082f31f83ed74fb0a712eebed14906bcbd#';
 		})
 	})
 	
