--- a/app/views/welcome/app.xml.erb
+++ b/app/views/welcome/app.xml.erb
@@ -6,10 +6,11 @@
   </ModulePrefs>
   <Content type="html">
     <![CDATA[
-	  <%= javascript_include_tag '//hangoutsapi.appspot.com/static/hangout.js' %>
-	  <%= javascript_include_tag '//supporthangout.heroku.com/javascripts/main.js' %>
-	  <%= javascript_include_tag '//supporthangout.heroku.com/javascripts/jquery-1.6.4.min.js' %>
-	  <%= javascript_include_tag 'http://localhost:3000/javascripts/scratch.js' %>
+	  <%= stylesheet_link_tag "main" %>
+	  <%= javascript_include_tag '//hangoutsapi.appspot.com/static/hangout.js', :cache => false %>
+	  <%= javascript_include_tag 'main.js', :cache => false %>
+	  <%= javascript_include_tag 'jquery-1.6.4.min.js', :cache => false %>
+	  <%= javascript_include_tag '//localhost/javascripts/scratch.js', :cache => false %>
 		  
 	  <div id='body_area'></div>
     ]]>
